12S20006|Nadya  Dioranta Tambunan|2020|Information Systems\
12S20050|Putri Esrahana Manurung|2020|Information Systems\
12S19062|Ardika Solagratia Sianturi|2019|Information Systems\
12S20051|Rony Samuel Sinaga|2020|Information Systems\
12S20010|Suprianto Dharma Sitompul|2020|Information Systems\
12S20054|Rossianna Dewi Sri Hutabarat|2020|Information Systems\
12S20011|Gabriel Saputra Panggabean|2020|Information Systems\
12S20055|Aygrace Lia Hutagaol|2020|Information Systems\
12S20052|Eka Rohani Gultom|2020|Information Systems\
12S20053|Andri Anjelia Hutapea|2020|Information Systems\
12S19025|Petrus Aquanur Sinaga|2019|Information Systems\
12S19027|Gilbert E M Hutajulu|2019|Information Systems\
12S20014|Lidia Ginting|2020|Information Systems\
12S20015|Niver Titi Sibuea|2020|Information Systems\
12S20012|Ary Gunawan Raja Dirumana Aritonang|2020|Information Systems\
12S20056|Siska Romaito Manullang|2020|Information Systems\
12S20013|Lydia Tesalonika|2020|Information Systems\
12S20018|Gabriella Putri Panjaitan|2020|Information Systems\
12S20019|Kristina Margaret Sitorus|2020|Information Systems\
12S20016|Via Uni Rosa Sianipar|2020|Information Systems\
12S20017|Lile Asima Manalu|2020|Information Systems\
12S19030|Jaime Christ Bonar Sirait|2019|Information Systems\
12S20021|Sintia Lolita Silaen|2020|Information Systems\
12S20022|Agnes Veronika Sihombing|2020|Information Systems\
12S20020|Wahyu Krisdangolyanti Simamora|2020|Information Systems\
12S19036|Lucas Ronaldi Hutabarat|2019|Information Systems\
12S19038|Pabertoni Panjaitan|2019|Information Systems\
12S3102|12S20047|2020/2021|odd|None\
KUS4101|12S20021|2020/2021|odd|None\
KUS4101|12S20053|2020/2021|odd|None\
12S3103|12S20050|2021/2022|odd|None\
12S3102|12S20034|2020/2021|odd|None\
12S2202|12S20012|2021/2022|odd|None\
12S4003|12S20023|2020/2021|even|None\
FIS1103|12S20010|2021/2022|odd|None\
12S3101|12S20022|2021/2022|odd|None\
12S1102|12S20050|2021/2022|odd|None\
---