@@ -254,3 +254,14 @@ FIS1103|12S20010|2021/2022|odd|None\
 12S3101|12S20022|2021/2022|odd|None\
 12S1102|12S20050|2021/2022|odd|None\
 ---
+
+
+course-add#12S2203#Object-oriented Programming#3#C
+course-add#10S1002#Pemrograman Prosedural#2#DC
+student-add#12S20999#Wiro Sableng#2020#Information SystemsC
+enrollment-add#12S2203#12S20999#2021/2022#evenC
+student-add#12S20111#Jaka Sembung#2019#Information SystemsC
+enrollment-add#12S2203#12S20000#2020/2021#evenC
+enrollment-add#12S2200#12S20000#2020/2021#oddC
+---
+
